@@ -11,6 +11,24 @@ AC_ISC_POSIX
 AC_PROG_CC
 AC_HEADER_STDC
 
+# LT Version numbers, remember to change them just *before* a release.
+#   (Interfaces removed:    CURRENT++, AGE=0, REVISION=0)
+#   (Interfaces added:      CURRENT++, AGE++, REVISION=0)
+#   (No interfaces changed:                   REVISION++)
+LIBEMPATHY_CURRENT=0
+LIBEMPATHY_AGE=0
+LIBEMPATHY_REVISION=0
+AC_SUBST(LIBEMPATHY_CURRENT)
+AC_SUBST(LIBEMPATHY_AGE)
+AC_SUBST(LIBEMPATHY_REVISION)
+
+LIBEMPATHY_GTK_CURRENT=0
+LIBEMPATHY_GTK_AGE=0
+LIBEMPATHY_GTK_REVISION=0
+AC_SUBST(LIBEMPATHY_GTK_CURRENT)
+AC_SUBST(LIBEMPATHY_GTK_AGE)
+AC_SUBST(LIBEMPATHY_GTK_REVISION)
+
 AM_PROG_LIBTOOL
 AM_PATH_GLIB_2_0
 AC_PATH_XTRA
